--- a/template/inicio.html
+++ b/template/inicio.html
@@ -237,27 +237,27 @@
                 <p>Apoya y comprende mejor a la comunidad sorda, marcando una diferencia significativa.</p>
             </div>
             <div class="carousel-item">
-                <img src="https://github.com/straeker18/ppi_dai_ARANGOs/blob/263213fdf9e7a4b9c27f738b22c2de4140eda1a5/static/imagen%204%20inicio.png" alt="App 4">
+                <img src="static/imagen_4_inicio.jpg" alt="App 4">
                 <h3>Rompe Barreras de Comunicación</h3>
                 <p>Elimina barreras auditivas y construye puentes entre diferentes capacidades.</p>
             </div>
             <div class="carousel-item">
-                <img src="https://github.com/straeker18/ppi_dai_ARANGOs/blob/263213fdf9e7a4b9c27f738b22c2de4140eda1a5/static/imagen%205%20inicio.jpg" alt="App 5">
+                <img src="static/imagen_5_inicio.jpg" alt="App 5">
                 <h3>Amplía tus Habilidades de Comunicación</h3>
                 <p>Adquiere una nueva habilidad y conviértete en un comunicador más inclusivo.</p>
             </div>
             <div class="carousel-item">
-                <img src="https://github.com/straeker18/ppi_dai_ARANGOs/blob/263213fdf9e7a4b9c27f738b22c2de4140eda1a5/static/imagen%206%20inicio.jpg" alt="App 6">
+                <img src="static/imagen_6_inicio.jpg" alt="App 6">
                 <h3>Involúcrate en una Causa Significativa</h3>
                 <p>Promueve la accesibilidad y la igualdad, impactando positivamente en la vida de las personas con discapacidad auditiva.</p>
             </div>
             <div class="carousel-item">
-                <img src="https://github.com/straeker18/ppi_dai_ARANGOs/blob/263213fdf9e7a4b9c27f738b22c2de4140eda1a5/static/imagen%207%20inicio.jpg" alt="App 7">
+                <img src="static/imagen_7_inicio.jpg" alt="App 7">
                 <h3>Haz la Diferencia!!!</h3>
                 <p>Aprende lenguaje de señas para contribuir a una mayor inclusión en tu mundo.</p>
             </div>
             <div class="carousel-item">
-                <img src="https://github.com/straeker18/ppi_dai_ARANGOs/blob/263213fdf9e7a4b9c27f738b22c2de4140eda1a5/static/imagen%208%20inicio.png" alt="App 8">
+                <img src="static/imagen_8_inicio.jpg" alt="App 8">
                 <h3>Redescubre tu expresión</h3>
                 <p>Descubre una forma única de expresar ideas, emociones y pensamientos en tu vida cotidiana.</p>
             </div>
@@ -277,7 +277,7 @@
                 <p>Apoya y comprende mejor a la comunidad sorda, marcando una diferencia significativa..</p>
             </div>
             <div class="carousel-item">
-                <img src="https://github.com/straeker18/ppi_dai_ARANGOs/blob/263213fdf9e7a4b9c27f738b22c2de4140eda1a5/static/imagen%204%20inicio.png" alt="App 4">
+                <img src="static/imagen_4_inicio.jpg" alt="App 4">
                 <h3>Rompe Barreras de Comunicación</h3>
                 <p>Elimina barreras auditivas y construye puentes entre diferentes capacidades.</p>
             </div>
